# VUNJA-LUTI

./: .gitignore  LICENSE  README.md  Vunja_Luti.sh  pyproject.toml  setup.sh
go/: README.md  app.go  build-gui.sh  config.go  geo.go  go.mod  main.go  socks.go  tor.go  torrc.go  ui.go  wails.json
go/cmd/vl/: main.go  ui.go
go/internal/core/: config.go  geo.go  net.go  status.go  tor.go  torrc.go  wrap.go
legacy/: Vunja_Luti.sh
packaging/: build-deb.sh  make_icon.py  vunja-luti.desktop
vunjaluti/: __init__.py  themes.py
vunjaluti/cli/: __init__.py  main.py  ui.py
vunjaluti/core/: __init__.py  config.py  doctor.py  engine.py  firewall.py  geo.py  privexec.py  sessions.py  torrc.py  wrap.py
vunjaluti/gui/: __init__.py  app.py  style.py  widgets.py  workers.py
